--- a/aritmetica.tex
+++ b/aritmetica.tex
@@ -266,7 +266,7 @@ Carlos tenía 800 Gapes al inicio del día. Él decidió regalar la mitad del di
 \begin{solution}
     Cuando llegó su primer sobrino, le dio $800/2 = 400$ gapes, y le quedaron otros 400. Al segundo, le dió $400/2 = 200$ y le quedaron 200. Al tercero le dió $200/2=100$ y le quedaron 100. Al cuarto le dió $100/2=50$ y le quedaron 50. Así, al quinto le dió 25 y le quedaron 25.
 
-    En general, vemos que al $n$-ésimo sobrino le dió $800/2^n$ gapes. \hfill $\square$
+    En general, vemos que al $n$-ésimo sobrino le dió $800/2^n$ gapes, es decir, el resultado de dividir 800 entre 2 un total de $n$ veces. \hfill $\square$
 \end{solution}
 
 \question
@@ -282,20 +282,21 @@ Una persona inició un trabajo a las 3:47 p. m. El trabajo lo terminó la primer
 \end{choices}
 
 \begin{solution}
-    Note que la hora la estamos expresando en forma $a:bc$ con $a,b,c$ dígitos. Además, como los minutos llegan hasta 59 y luego vuelven a 00, $b \leq 5$. Queremos que $a+b+c = 20$, pero queremos que $a$ sea un número cercano después de 3, pues nos dice que la persona terminó el trabajo la \textit{primera} vez que la suma de los dígitos que indican la hora y los minutos fue 20. 
-    
-    Para que $a=3$, necesitaríamos que $b+c = 17$, pero como $b \leq 5$, sería necesario que $c$ fuera mayor o igual a $12$ y esto no puede suceder. De la misma forma para que $a=4$, $b+c=16$, y como $b \leq 5$, $c \geq 11$, de nuevo no se puede. 
-    
-    En general, note que como $b \leq 5$ y $c \leq 9$, entonces $b+c \leq 14$, así que para que la suma sea 20, $a$ debe ser al menos 6. Si $a=6$, entonces $b$ debe ser 5 y $c$ debe ser 9. Es decir que la persona termina el trabajo a las 6:59 p. m., por lo que pasaron 3 horas y 12 minutos, es decir $180+12=192$ minutos. La respuesta correcta es la B.
-
-    \textbf{Forma alternativa de hacer el problema:} Podemos utilizar las soluciones, sumando esa cantidad de minutos a la hora actual y ver si satisface que la suma de los dígitos es 20:
+    Podemos utilizar las soluciones, sumando esa cantidad de minutos a la hora de inicio y verificar si la suma de los dígitos es 20:
     \begin{enumerate}[A.]
-        \item 172 minutos son 120+52, es decir 2 horas y 52 minutos. Al sumarlo a la hora de inicio, tenemos 3:47 $\to$ 5:47 (cuando pasan 2 horas) $\to$ 6:00 (cuando pasan 13 minutos más, faltan $52-13 =39$ minutos) $\to$ 6:39 pm. Sumando los dígitos obtenemos 18. Así esta no puede ser.
-        \item Hacemos lo mismo: 192 son 3 horas y 12 minutos, que al sumarlo a 3:47, obtenemos 6:59. Estos sí suman 20.
+        \item 172 minutos son 120+52, es decir 2 horas y 52 minutos. Al sumarlo a la hora de inicio, tenemos 3:47 $\to$ 5:47 (cuando pasan 2 horas) $\to$ 6:00 (cuando pasan 13 minutos más, faltan $52-13 =39$ minutos) $\to$ 6:39 pm. Sumando los dígitos obtenemos 18, que es distinto a 20.
+        \item Hacemos lo mismo: 192 son 3 horas y 12 minutos, que al sumarlo a 3:47 pm, obtenemos las 6:59 pm. Estos sí suman 20.
+        \item 212 minutos son 3 horas y 32 minutos. Sumándolo a 3:47 pm obtenemos las 7:17 pm, cuyos dígitos no suman 20.
+        \item 232 minutos son 3 horas y 52 minutos. 3:47 pm m\'as 3:52 resulta en las 7:39 pm, cuyos dígitos no suman 20.
     \end{enumerate}
-    Note que las otras dos opciones toman más tiempo. Aunque los dígitos sumaran 20 al terminar el trabajo después de esa cantidad de minutos, no sería la primera vez que la suma de los dígitos es 20, pues ya en la opción B. sumaban 20, y ocurre antes. De esta forma, la opción B. debe ser la correcta.
+    Por lo tanto, la opción correcta es la B. \hfill $\square$
 
-    Por completitud, 3:47 más 212 minutos es 7:19, que no suman 20. 3:47 más 232 es 7:39 que tampoco suman 20. \hfill $\square$
+    {\small\itshape
+    En la solución anterior utilizamos las respuestas para llegar a la única que coincidiera con la información del problema. Sin embargo, no sabemos por qué esta es la primera vez que los dígitos de la hora suman 20. Vamos a resolver el problema como si no tuviéramos opciones de respuesta. 
+    
+    Digamos que la primera vez que la suma de los dígitos de la hora sumaron 20 después de las 3:47 pm fue a las ab:cd (pm o am, no sabemos aún). Los minutos llegan hasta 59 y luego vuelven a 00, de forma que $c \leq 5$, análogamente, $a$ debe ser 0 o 1, y si es 1 entonces $b$ es 0, 1 o 2.
+    
+    Como $c \leq 5$ y $d \leq 9$, entonces $c+d \leq 14$, así que para que la suma sea 20, $a+b$ debe ser al menos 6. La primera vez que esto ocurre después de las 3:47 pm es si $ab=06$, y entonces $c=5$ y $d=9$. Es decir que la persona termina el trabajo a las 6:59 pm: pasaron 3 horas y 12 minutos, es decir $180+12=192$ minutos.}
 \end{solution}
 
 \question
@@ -311,11 +312,17 @@ En una fábrica se empacaron 84 bombillos en varias cajas con 7 bombillos. En ca
 \end{choices}
 
 \begin{solution}
-    Lean bien la pregunta. ¿Cuál de las opciones es \textit{imposible} que suceda? No tenemos demasiada información, solo una restricción: en cada caja debe haber más bombillos en perfecto estado (buenos), que malos. Entonces, ¿cuántos bombillos buenos debe haber en cada caja?, ¿Cuántas cajas hay?, ¿Cuántos bombillos buenos debe haber en total? ¿Cuántos bombillos defectuosos (malos)? Responder estas preguntas debería ayudarnos a resolver cuál opción es imposible.
+    Leamos la pregunta de nuevo. ¿Cuál de las opciones es \textit{imposible} que suceda?
 
-    Como cada caja tiene 7 bombillos, y debe haber más bombillos buenos que malos, debe haber al menos cuatro bombillos buenos en cada caja, y máximo 3 bombillos malos, esto pues si hubiesen 4 bombillos malos (o más), para completar los 7 solo quedarían 3 bombillos buenos (o menos), pero tienen que haber más buenos que bombillos malos.
+    Como cada caja tiene 7 bombillos, y debe haber más bombillos buenos que malos, esto quiere decir que hay máximo 3 bombillos malos y mínimo 4 buenos (si no, tendríamos 4 malos, y solo hay espacio para 3 buenos, que son menos). Como hay 84 bombillos en cajas de 7, hay $84/7 = 12$ cajas. Uniendo estas dos observaciones, hay como máximo $12\cdot 3 = 36$ bombillos malos y como mínimo $12\cdot 4 = 48$ bombillos buenos. Por lo tanto, claramente no es posible que se empacaran más de 40 bombillos defectuosos. La respuesta correcta es la C. \hfill $\square$
 
-    Como $84/7 = 12$, esto quiere decir que los bombillos se dividieron en 12 cajas con 7 bombillos cada una. Como en cada caja hay al menos 4 bombillos buenos, en total debe haber al menos $12 \cdot 4 = 48$ bombillos buenos. Como el total de bombillos es 84 y hay como mínimo 48 bombillos buenos, debe haber como máximo $84-48=36$ bombillos defectuosos. Así, es \textit{imposible} que se empacaran más de 40 bombillos defectuosos. La opción correcta es la C. \hfill $\square$
+    {\small\itshape
+    Veamos por qué el resto no son imposibles:
+    
+    Si en cada caja hay 3 bombillos defectuosos y 4 en perfecto estado, habría en total $36$ defectuosos y $48$ en perfecto estado. Así la A. y la B. no son imposibles.
+
+    Y si todos los bombillos estuvieran en perfecto estado no rompemos ninguna regla del problema y estaríamos empacando más de 60 de este tipo. Así la D. tampoco es imposible.
+    }    
 \end{solution}
 
 \question
@@ -333,9 +340,7 @@ Una profesora tenía 8000 gapes para comprar lápices y borradores. Ella compró
 \begin{solution}
     En esta pregunta, se nos pide comprender el proceso de hacer un cálculo en varios pasos. Iniciamos con 8000 gapes. La profesora compró 6 lápices para cada uno de sus 4 estudiantes. ¿Cuántos lápices compró? $6\cdot 4 = 24$ lápices. Compró además la tercera parte del número de lápices. Por tanto, como compró 24 lápices, tuvo que haber comprado $24/3 = 8$ borradores. Cada lápiz costó 250 gapes. Como compró 24, gastó $24\cdot 250$ gapes. No hacemos el cálculo, porque viendo las opciones de respuesta, son expresiones aún sin calcular que tienen que ver con el dinero inicial (8000) y los precios (250 y 125). Por último, cada borrador costó $125$ gapes, y como compró 8, gastó $8\cdot125$ en borradores.
 
-    Así, tenía 8000 gapes. Compró los lápices por $24\cdot 250$ y por tanto le quedaron $8000-24\cdot250$. Luego compró los borradores y por tanto gastó $8\cdot125$ gapes más. Por lo tanto, al final le quedaron $8000-24\cdot250-8\cdot125$. La opción correcta es la A.
-
-    Como un reto adicional, intente encontrar \textbf{el error} en el siguiente argumento: como gastó $24\cdot250$ en lápices y $8\cdot125$ en borradores, en total gastó $24\cdot250+8\cdot125$ gapes. Hay que restar esta cantidad a 8000 para saber cuántos gapes le sobraron. Por lo tanto la expresión buscada es $8000-24\cdot250+8\cdot125$. \hfill $\square$
+    Así, tenía 8000 gapes. Compró los lápices por $24\cdot 250$ y por tanto le quedaron $8000-24\cdot250$. Luego compró los borradores y por tanto gastó $8\cdot125$ gapes más. Por lo tanto, al final le quedaron $8000-24\cdot250-8\cdot125$. La opción correcta es la A. \hfill $\square$
 \end{solution}
 
 \question
@@ -394,9 +399,10 @@ Luego de que ambos animales corrieran durante 3000 milisegundos, ¿cuál era la 
 
     Con el diagrama es fácil ver que la leona, para recorrer 10 metros, como da 3 pasos y en cada paso dura 100 milisegundos, va a durar en total 300 milisegundos. Y el venado da 2 pasos, durando en cada uno 150 milisegundos, es decir, para recorrer 10 metros dura 300 milisegundos. Es decir, ambos duran lo mismo en recorrer la misma distancia, por lo que tienen la misma velocidad. 
 
-    Note entonces que cuando la leona llega donde estaba el venado originalmente, recorriendo 10 metros, el venado ya va a haber avanzado 10 metros en el mismo tiempo. Así, se mantienen siempre a la misma distancia de 10 metros. Por lo tanto, en 3000 milisegundos estarán a 10 metros de distancia. La respuesta correcta es la B.
+    Note entonces que cuando la leona llega donde estaba el venado originalmente, recorriendo 10 metros, el venado ya va a haber avanzado 10 metros en el mismo tiempo. Así, se mantienen siempre a la misma distancia de 10 metros. Por lo tanto, en 3000 milisegundos estarán a 10 metros de distancia. La respuesta correcta es la B.  \hfill $\square$
 
-    Otra opción es calcularlo todo. Como cada paso de la leona toma 100 ms, en 3000 ms da $3000/100 = 30$ pasos, y como cada 3 pasos son 10 metros, recorre $(30/3)\cdot 10 = 100$ metros en 3000 ms. De forma similar, el venado da $3000/150 = 20$ pasos en 3000 ms, de forma que como cada 2 pasos recorre 10 metros, en 20 pasos habrá recorrido 100 metros. Así, ambos recorren la misma longitud y por tanto se mantienen a la misma distancia original: 10 metros. \hfill $\square$
+    {\small \itshape
+    Otra opción es calcularlo todo. Como cada paso de la leona toma 100 ms, en 3000 ms da $3000/100 = 30$ pasos, y como cada 3 pasos son 10 metros, recorre $(30/3)\cdot 10 = 100$ metros en 3000 ms. De forma similar, el venado da $3000/150 = 20$ pasos en 3000 ms, de forma que como cada 2 pasos recorre 10 metros, en 20 pasos habrá recorrido 100 metros. Así, ambos recorren la misma longitud y por tanto se mantienen a la misma distancia original: 10 metros.}
 \end{solution}
 
 \question
@@ -411,9 +417,7 @@ Para un concurso se numeran consecutivamente los boletos empezando en 1. Si se h
 \begin{solution}
     En los primeros 9 boletos (1-9) se escribió un solo dígito. Nos quedan $252-9=243$ dígitos por escribir. Del 10 al 99, se escribieron dos dígitos pero, ¿cuántos números hay aquí? Si restamos $99-10$, no estamos contando el 10, por lo que la cantidad de números es $99-9=90$, es decir hay que restar el número anterior al primero que queremos contar. Si esto no les convence, intenten reflexionarlo hasta convencerse.
 
-    Por lo tanto, del 10 al 99 escribimos $2\cdot90=180$ dígitos. Quedan por tanto $243-180=63$ dígitos. Como los siguientes números tienen 3 dígitos, faltan $63/3 = 21$ números de escribir. Como hasta ahora llegamos al 99 y faltan 21, el último número que se escribe es $99+21 = 120$. Por lo tanto, se numeraron (desde el 1 al 120), 120 boletos. La opción correcta es la C.
-
-    Note que todas las opciones de respuesta están muy cerca unas de las otras, así que si uno se equivoca por un número, probablemente esa opción también esté, pero sería incorrecta. Es decir, que las opciones de respuesta, en estos casos, no nos ayudan a saber si cometimos un error. \hfill $\square$
+    Por lo tanto, del 10 al 99 escribimos $2\cdot90=180$ dígitos. Quedan por tanto $243-180=63$ dígitos. Como los siguientes números tienen 3 dígitos, faltan $63/3 = 21$ números de escribir. Como hasta ahora llegamos al 99 y faltan 21, el último número que se escribe es $99+21 = 120$. Por lo tanto, se numeraron (desde el 1 al 120), 120 boletos. La opción correcta es la C. \hfill $\square$
 \end{solution}
 
 \question
@@ -430,9 +434,10 @@ En una campaña de reciclaje, por cada botella reciclada se otorgan 150 puntos. 
     \[
     \frac{1200}{150}=\frac{120}{15}=\frac{40\cdot\cancel3}{5\cdot\cancel3}=\frac{8\cdot5}{5}=8
     \]
-    El equipo de Ana recició 8 botellas en total. La opción correcta es la C.
-
-    Otra posible solución es considerar cuántas botellas equivalen a un premio. Como cada botella son 150 puntos y cada premio son 400, ¿cuántas botellas necesitamos para hacer 400 puntos? $400/150 = 40/15 = 8/3$. Para obtener un premio, se necesitan ``$8/3$ de botella''. Por lo tanto, para tres premios se necesitan $(8/3) \cdot 3 = 8$ botellas.  \hfill $\square$
+    El equipo de Ana recició 8 botellas en total. La opción correcta es la C. \hfill $\square$
+    
+    {\small \itshape
+    Otra posible solución es considerar cuántas botellas equivalen a un premio. Como cada botella son 150 puntos y cada premio son 400, ¿cuántas botellas necesitamos para hacer 400 puntos? $400/150 = 40/15 = 8/3$. Para obtener un premio, se necesitan ``$8/3$ de botella''. Por lo tanto, para tres premios se necesitan $(8/3) \cdot 3 = 8$ botellas.  }
 \end{solution}
 
 \question En una fábrica se empacó cierto producto de forma individual. La fábrica utilizó 2 máquinas para realizar este trabajo. La máquina antigua empacó 24 productos cada hora. La máquina nueva empacó 30 productos cada hora. Ayer la máquina antigua comenzó a empacar a las 7:00 a. m. y la máquina nueva comenzó a empacar a las 8:30 a. m.
@@ -499,28 +504,8 @@ Vamos a resolver el problema de tres formas distintas:
     Como la nueva inició a las 8:30, tienen la misma cantidad de producto empacado a las $8\colon30 + 6\colon00 = 14\colon30 = 2\colon30 \text{ p.m.}$, la opción C.
     \hfill $\square$ \end{solution}
 
-    Una tercera forma es resolviendo un sistema de ecuaciones.
+    Una tercera forma es resolviendo un sistema de ecuaciones, que veremos en el capítulo de álgebra.
     
-    \begin{solution}
-        
-    
-    Como las máquinas empacan producto de forma lineal (es decir, la cantidad de producto empacado por hora es constante), la pendiente de la antigua máquina es de 24 productos / hora, la de la nueva es 30 productos / hora y sabemos que a las 7:00 la antigua ha producido 0 y a las 8:30 la nueva ha producido 0. Podemos usar la fórmula de punto pendiente para obtener la cantidad de producto empacado por la máquina antigua $y_1(t)$ aquel empacado por la nueva, $y_2(t)$:
-    \[
-    y_1(t) = 24(t-7),\ \ \ y_2(t) = 30(t-8.5)
-    \]
-    Así, para que $y_1(t) = y_2(t)$:
-    \begin{align*}
-    24(t-7) &= 30 (t-8.5) &&\text{dividimos entre 6 a ambos lados}\\
-    4(t-7) &= 5(t-8.5) &&\text{distribuimos el producto respecto de la suma}\\
-    4t - 4\cdot7 &= 5t-5\cdot8.5 &&\text{pasamos $4t$ a restar y hacemos los cálculos}\\
-    -28 &= t-42.5 &&\text{pasamos $42.5$ a sumar} \\
-    42.5-28 &= t \\
-     14.5 &= t
-    \end{align*}
-
-    De esta forma, ambas máquinas han empacado la misma cantidad de producto a las 14 horas y media, es decir, a las 2:30 p.m., que es la opción C. \hfill $\square$
-\end{solution}
-
 \question
 Una galaxia tiene dos planetas: P y Q. Cada
 año del planeta P tiene 120 días terrestres. Por
