Solución ejercicio de probabilidad

--- a/conteo.tex
+++ b/conteo.tex
@@ -359,10 +359,18 @@ En la heladería del frente, sólo ofrecen helado en cono: ya sea normal o azuca
 \question Una caja tiene 18 bolas, 8 son rojas y las otras verdes. Si se saca una bola al azar, la probabilidad de que esa bola sea verde es\footnote{\cite{OLCOMAN1-2021}}
 \begin{choices}
     \choice $\dfrac{4}{9}$
-    \choice $\dfrac{5}{9}$
+    \CorrectChoice $\dfrac{5}{9}$
     \choice $\dfrac{9}{4}$
     \choice $\dfrac{9}{4}$
 \end{choices}
+
+\begin{solution}
+    La probabilidad de que ocurra un evento $X$ es la razón entre el número de casos favorables --- en los que sucede $X$ --- al total de casos posibles. En este caso, hay 18 posibles bolas distintas que pueden salir --- estos son los casos totales ---, de las cuales $18-8 = 10$ son verdes --- esta es la cantidad de casos favorables. Por lo tanto, la probabilidad de que al sacar una bola al azar de la caja esta sea verde es:
+    \[
+    \frac{\text{casos favorables}}{\text{casos totales}} = \frac{10}{18} = \frac{5}{9}
+    \]
+    De esta forma, la opción correcta es la B.
+\end{solution}
 
 
 
